--- a/stats.html
+++ b/stats.html
@@ -1,38 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AdRevenuePro Stats</title>
-  <style>
-    body { font-family: sans-serif; background:#121212; color:#eee; padding:20px; }
-    .card { background:#1e1e1e; padding:20px; border-radius:12px; max-width:500px; margin:auto; }
-    pre { background:#000; padding:12px; border-radius:8px; color:#0f0; }
-  </style>
+<meta charset="UTF-8">
+<title>AdRevenuePro Stats</title>
+<style>
+body{font-family:sans-serif;background:#121212;color:#eee;padding:20px;}
+.card{background:#1e1e1e;padding:20px;border-radius:12px;max-width:500px;margin:auto;}
+pre{background:#000;padding:12px;border-radius:8px;color:#0f0;word-wrap:break-word;}
+</style>
 </head>
 <body>
-  <div class="card">
-    <h2>📊 Your Stats</h2>
-    <p id="welcome"></p>
-    <pre id="statsBox">Loading...</pre>
-    <h3>Invite URL</h3>
-    <pre id="invite"></pre>
-  </div>
+<div class="card">
+<h2>📊 Your Stats</h2>
+<p id="welcome"></p>
+<pre id="statsBox">Loading...</pre>
+<h3>Invite URL</h3>
+<pre id="invite"></pre>
+</div>
 
-  <script>
-    const mappingUrl="https://gist.githubusercontent.com/Preasx24/4517ac43eff88b7e226fbbdc627a3c08/raw/gistfile1.txt";
-    const user=JSON.parse(localStorage.getItem("adRevenueUser")||"{}");
-    if(!user.accessCode){ document.body.innerHTML="Not logged in"; }
+<script>
+const mappingUrl="https://gist.githubusercontent.com/Preasx24/4517ac43eff88b7e226fbbdc627a3c08/raw/gistfile1.txt";
+const user=JSON.parse(localStorage.getItem("adRevenueUser")||"{}");
+if(!user.accessCode){ document.body.innerHTML="Not logged in"; }
 
-    document.getElementById('welcome').textContent=`Welcome ${user.username}`;
+document.getElementById('welcome').textContent=`Welcome ${user.username}`;
+document.getElementById('invite').textContent=`https://revenue.dtech-services.co.za/#${user.accessCode}`;
 
-    fetch(mappingUrl).then(r=>r.json()).then(async map=>{
-      const entry=map.find(e=>e.accessCode===user.accessCode);
-      if(!entry){ document.getElementById("statsBox").textContent="No gist mapping found."; return; }
-      const gist=await fetch(entry.gistUrl).then(r=>r.json());
-      document.getElementById("statsBox").textContent=JSON.stringify(gist.files["stats.json"].content,null,2);
+async function loadStats(){
+  const map=await fetch(mappingUrl).then(r=>r.json());
+  let entry=map.find(e=>e.accessCode===user.accessCode);
+
+  // If no entry, create a new mapping and update gist
+  if(!entry){
+    const gistApi="https://api.github.com/gists"; // Create new gist if needed
+    const token=await fetch("https://gist.githubusercontent.com/Preasx24/c54812fe3d3e5f8d586f1dd010701919/raw/e6ebaaa6f2bb72ad1d2444b10ffb059f9c990fbe/gistfile1.txt").then(r=>r.text());
+
+    const newGist=await fetch(gistApi,{
+      method:"POST",
+      headers:{
+        "Authorization":"token "+token.trim(),
+        "Accept":"application/vnd.github+json"
+      },
+      body:JSON.stringify({
+        description:"AdRevenuePro stats for "+user.username,
+        public:false,
+        files:{"stats.json":{content:JSON.stringify({clicks:0,revenue:0},null,2)}}
+      })
+    }).then(r=>r.json());
+
+    entry={accessCode:user.accessCode,gistUrl:newGist.html_url};
+    map.push(entry);
+
+    // Update main mapping gist
+    const mappingGistApi="https://api.github.com/gists/4517ac43eff88b7e226fbbdc627a3c08";
+    await fetch(mappingGistApi,{
+      method:"PATCH",
+      headers:{
+        "Authorization":"token "+token.trim(),
+        "Accept":"application/vnd.github+json"
+      },
+      body:JSON.stringify({files:{"gistfile1.txt":{content:JSON.stringify(map,null,2)}}})
     });
+  }
 
-    document.getElementById('invite').textContent=`https://revenue.dtech-services.co.za/#${user.accessCode}`;
-  </script>
+  const gist=await fetch(entry.gistUrl).then(r=>r.json());
+  document.getElementById("statsBox").textContent=JSON.stringify(JSON.parse(gist.files["stats.json"].content),null,2);
+}
+
+loadStats();
+</script>
 </body>
 </html>
