--- a/stats.html
+++ b/stats.html
@@ -4,35 +4,46 @@
 <meta charset="UTF-8">
 <title>AdRevenuePro Stats</title>
 <style>
-body{font-family:sans-serif;background:#121212;color:#eee;padding:20px;}
-.card{background:#1e1e1e;padding:20px;border-radius:12px;max-width:500px;margin:auto;}
-pre{background:#000;padding:12px;border-radius:8px;color:#0f0;word-wrap:break-word;}
+body { font-family:sans-serif; background:#121212; color:#eee; padding:20px; }
+.card { background:#1e1e1e; padding:20px; border-radius:12px; max-width:600px; margin:auto; }
+pre { background:#000; padding:12px; border-radius:8px; color:#0f0; word-wrap:break-word; }
+h2, h3 { margin-bottom:10px; }
+.stat-item { margin-bottom:8px; }
+.url-box { background:#222; padding:10px; border-radius:6px; margin-bottom:10px; word-break:break-all; }
 </style>
 </head>
 <body>
 <div class="card">
 <h2>📊 Your Stats</h2>
 <p id="welcome"></p>
-<pre id="statsBox">Loading...</pre>
-<h3>Invite URL</h3>
-<pre id="invite"></pre>
+<div id="statsDetails">Loading...</div>
+
+<h3>URLs for Sharing</h3>
+<div>
+  <div class="stat-item"><strong>Custom Track URL:</strong></div>
+  <div id="trackUrl" class="url-box"></div>
+  <div class="stat-item"><strong>Invite URL (max 10 loads/day):</strong></div>
+  <div id="inviteUrl" class="url-box"></div>
+</div>
 </div>
 
 <script>
 const mappingUrl="https://gist.githubusercontent.com/Preasx24/4517ac43eff88b7e226fbbdc627a3c08/raw/gistfile1.txt";
 const user=JSON.parse(localStorage.getItem("adRevenueUser")||"{}");
+
 if(!user.accessCode){ document.body.innerHTML="Not logged in"; }
 
 document.getElementById('welcome').textContent=`Welcome ${user.username}`;
-document.getElementById('invite').textContent=`https://revenue.dtech-services.co.za/#${user.accessCode}`;
+document.getElementById('trackUrl').textContent=`https://revenue.dtech-services.co.za/track.html#${user.accessCode}`;
+document.getElementById('inviteUrl').textContent=`https://revenue.dtech-services.co.za/#${user.accessCode}`;
 
 async function loadStats(){
   const map=await fetch(mappingUrl).then(r=>r.json());
   let entry=map.find(e=>e.accessCode===user.accessCode);
 
-  // If no entry, create a new mapping and update gist
+  // If no entry, create a new mapping gist
   if(!entry){
-    const gistApi="https://api.github.com/gists"; // Create new gist if needed
+    const gistApi="https://api.github.com/gists";
     const token=await fetch("https://gist.githubusercontent.com/Preasx24/c54812fe3d3e5f8d586f1dd010701919/raw/e6ebaaa6f2bb72ad1d2444b10ffb059f9c990fbe/gistfile1.txt").then(r=>r.text());
 
     const newGist=await fetch(gistApi,{
@@ -63,8 +74,22 @@ async function loadStats(){
     });
   }
 
+  // Fetch user stats
   const gist=await fetch(entry.gistUrl).then(r=>r.json());
-  document.getElementById("statsBox").textContent=JSON.stringify(JSON.parse(gist.files["stats.json"].content),null,2);
+  const stats=JSON.parse(gist.files["stats.json"].content);
+
+  // Format display
+  let html=`<div class="stat-item"><strong>Total Clicks:</strong> ${stats.clicks}</div>`;
+  html+=`<div class="stat-item"><strong>Total Revenue:</strong> $${stats.revenue.toFixed(3)}</div>`;
+  if(stats.daily){
+    html+='<div class="stat-item"><strong>Daily Stats:</strong><ul>';
+    for(const day in stats.daily){
+      html+=`<li>${day}: ${stats.daily[day].count} clicks</li>`;
+    }
+    html+='</ul></div>';
+  }
+
+  document.getElementById("statsDetails").innerHTML=html;
 }
 
 loadStats();
