--- a/stats.html
+++ b/stats.html
@@ -10,28 +10,30 @@ pre { background:#000; padding:12px; border-radius:8px; color:#0f0; word-wrap:br
 h2, h3 { margin-bottom:10px; }
 .stat-item { margin-bottom:8px; }
 .url-box { background:#222; padding:10px; border-radius:6px; margin-bottom:10px; word-break:break-all; }
+ul { margin:6px 0 0 18px; }
 </style>
 </head>
 <body>
 <div class="card">
-<h2>📊 Your Stats</h2>
-<p id="welcome"></p>
-<div id="statsDetails">Loading...</div>
+  <h2>📊 Your Stats</h2>
+  <p id="welcome"></p>
+  <div id="statsDetails">Loading...</div>
 
-<h3>URLs for Sharing</h3>
-<div>
-  <div class="stat-item"><strong>Custom Track URL:</strong></div>
-  <div id="trackUrl" class="url-box"></div>
-  <div class="stat-item"><strong>Invite URL (max 10 loads/day):</strong></div>
-  <div id="inviteUrl" class="url-box"></div>
-</div>
+  <h3>URLs for Sharing</h3>
+  <div>
+    <div class="stat-item"><strong>Custom Track URL:</strong></div>
+    <div id="trackUrl" class="url-box"></div>
+    <div class="stat-item"><strong>Invite URL (max 10 loads/day):</strong></div>
+    <div id="inviteUrl" class="url-box"></div>
+  </div>
 </div>
 
 <script>
 const mappingUrl="https://gist.githubusercontent.com/Preasx24/4517ac43eff88b7e226fbbdc627a3c08/raw/gistfile1.txt";
+const tokenUrl="https://gist.githubusercontent.com/Preasx24/c54812fe3d3e5f8d586f1dd010701919/raw/e6ebaaa6f2bb72ad1d2444b10ffb059f9c990fbe/gistfile1.txt";
 const user=JSON.parse(localStorage.getItem("adRevenueUser")||"{}");
 
-if(!user.accessCode){ document.body.innerHTML="Not logged in"; }
+if(!user.accessCode){ document.body.innerHTML="❌ Not logged in"; throw new Error("No user"); }
 
 document.getElementById('welcome').textContent=`Welcome ${user.username}`;
 document.getElementById('trackUrl').textContent=`https://revenue.dtech-services.co.za/track.html#${user.accessCode}`;
@@ -41,47 +43,61 @@ async function loadStats(){
   const map=await fetch(mappingUrl).then(r=>r.json());
   let entry=map.find(e=>e.accessCode===user.accessCode);
 
-  // If no entry, create a new mapping gist
+  // If no entry, create a new gist and update mapping
   if(!entry){
-    const gistApi="https://api.github.com/gists";
-    const token=await fetch("https://gist.githubusercontent.com/Preasx24/c54812fe3d3e5f8d586f1dd010701919/raw/e6ebaaa6f2bb72ad1d2444b10ffb059f9c990fbe/gistfile1.txt").then(r=>r.text());
-
-    const newGist=await fetch(gistApi,{
+    const token=(await fetch(tokenUrl).then(r=>r.text())).trim();
+    const newGist=await fetch("https://api.github.com/gists",{
       method:"POST",
       headers:{
-        "Authorization":"token "+token.trim(),
+        "Authorization":"token "+token,
         "Accept":"application/vnd.github+json"
       },
       body:JSON.stringify({
         description:"AdRevenuePro stats for "+user.username,
         public:false,
-        files:{"stats.json":{content:JSON.stringify({clicks:0,revenue:0},null,2)}}
+        files:{"stats.json":{content:JSON.stringify({clicks:0,revenue:0,daily:{}},null,2)}}
       })
     }).then(r=>r.json());
 
-    entry={accessCode:user.accessCode,gistUrl:newGist.html_url};
+    entry={accessCode:user.accessCode,gistUrl:newGist.html_url,username:user.username};
     map.push(entry);
 
     // Update main mapping gist
-    const mappingGistApi="https://api.github.com/gists/4517ac43eff88b7e226fbbdc627a3c08";
-    await fetch(mappingGistApi,{
+    await fetch("https://api.github.com/gists/4517ac43eff88b7e226fbbdc627a3c08",{
       method:"PATCH",
       headers:{
-        "Authorization":"token "+token.trim(),
+        "Authorization":"token "+token,
         "Accept":"application/vnd.github+json"
       },
       body:JSON.stringify({files:{"gistfile1.txt":{content:JSON.stringify(map,null,2)}}})
     });
   }
 
-  // Fetch user stats
-  const gist=await fetch(entry.gistUrl).then(r=>r.json());
-  const stats=JSON.parse(gist.files["stats.json"].content);
+  // --- Normalize gist API URL ---
+  let gistApi;
+  if(entry.gistUrl.includes("gist.github.com")){
+    const gistId=entry.gistUrl.split("/").pop();
+    gistApi="https://api.github.com/gists/"+gistId;
+  } else if(entry.gistUrl.includes("api.github.com/gists/")){
+    gistApi=entry.gistUrl;
+  } else {
+    document.getElementById("statsDetails").textContent="❌ Invalid gist URL";
+    return;
+  }
 
-  // Format display
+  // --- Fetch stats ---
+  const gist=await fetch(gistApi).then(r=>r.json());
+  let stats={clicks:0,revenue:0,daily:{}};
+  if(gist.files && gist.files["stats.json"]){
+    try { stats=JSON.parse(gist.files["stats.json"].content); }
+    catch(e){ console.warn("Invalid stats.json, resetting"); }
+  }
+
+  // --- Build HTML display ---
   let html=`<div class="stat-item"><strong>Total Clicks:</strong> ${stats.clicks}</div>`;
   html+=`<div class="stat-item"><strong>Total Revenue:</strong> $${stats.revenue.toFixed(3)}</div>`;
-  if(stats.daily){
+
+  if(stats.daily && Object.keys(stats.daily).length){
     html+='<div class="stat-item"><strong>Daily Stats:</strong><ul>';
     for(const day in stats.daily){
       html+=`<li>${day}: ${stats.daily[day].count} clicks</li>`;
